--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "description": "",
   "main": "server.ts",
   "scripts": {
-    "start": "node src/server.ts",
+    "start": "ts-node src/server.ts",
     "watch": "tsc-watch --esModuleInterop src/server.ts --outDir ./dist --onSuccess \"node ./dist/server.js\"",
     "build": "npx tsc",
+    "migrate": "db-migrate --env test up && db-migrate up",
+    "demigrate": "set ENV=test&& db-migrate --env test down && db-migrate down -c 4",
     "jasmine": "jasmine",
+    "jasmine-ts": "jasmine-ts",
     "test": "npm run build && npm run jasmine",
-    "testJ": "ENV=test db-migrate --env test up && jasmine-ts && db-migrate db:drop test",
+    "testJ": "set ENV=test&& db-migrate --env test up && db-migrate up && jasmine-ts && db-migrate --env test down -c 4",
     "tsc": "tsc",
-    "server":"ts-node src/server.ts"
+    "server": "ts-node src/server.ts"
   },
   "author": "Udacity",
   "license": "ISC",
@@ -34,10 +37,12 @@
     "@types/jsonwebtoken": "^8.5.9",
     "@types/pg": "^7.14.7",
     "@types/pg-pool": "^2.0.3",
+    "@types/supertest": "^2.0.12",
     "dotenv": "^16.0.2",
-    "jasmine": "^4.4.0",
+    "jasmine": "^3.6.4",
     "jasmine-spec-reporter": "^6.0.0",
     "jasmine-ts": "^0.3.3",
+    "supertest": "^6.2.4",
     "ts-node": "^8.10.2",
     "tsc-watch": "^4.2.9"
   }
